feat: added additional outputs, fix auto-expand

--- a/src/mentions.component.html
+++ b/src/mentions.component.html
@@ -19,7 +19,7 @@
   (input)="onInput($event)"
   (blur)="onBlur($event)"
   (select)="onSelect($event)"
-  (focus)="focused = true"
+  (focus)="onFocus($event)"
   (mouseup)="onSelect($event)"
   (ngModelChange)="onChange($event)"
   (scroll)="onTextAreaScroll()"
